# 2022-Datenverarbeitung-fuer-TPH

./: README.md  build_and_run.sh
Ue01/: MathOperations.hpp  main.cpp
Ue02/: build_and_run.sh
Ue02/aufgabe/utils/: CMakeLists.txt  myStringOps.cpp
Ue03/: build_and_run.sh
Ue03/aufgabe/: main.cpp
Ue03/aufgabe/utils/: CMakeLists.txt  myVectorOps.cpp  myVectorOps.hpp
Ue04/: README.md
Ue04/aufgabe/: main.cpp
Ue04/aufgabe/utils/: myStatisticOps.cpp
Ue05/: build_and_run.sh  plot_exercise.p
Ue05/aufgabe/: main.cpp
Ue05/aufgabe/utils/: CMakeLists.txt  myPolynomial.cpp  myPolynomial.hpp
Ue06/: build_and_run.sh  oefbteam_f  oefbteam_m  plot_exercise.p
Ue06/aufgabe/: main.cpp
Ue06/namesoutput/: oefbteam_f.txt  oefbteam_m.txt
Ue07/aufgabe/: CMakeLists.txt  main.cpp
Ue08/aufgabe/: CMakeLists.txt  testbruch.cpp
Ue08/aufgabe/utils/: CMakeLists.txt  bruch.cpp  bruch.hpp
Ue09/GnuplotIostream/: Makefile  Note.txt  example_simple.cpp
Ue09/aufgabe/: main.cpp
Ue10/aufgabe/: CMakeLists.txt  main.cpp
Ue10/aufgabe/utils/: CMakeLists.txt  city.cpp  city.hpp
Ue11/: build_and_run.sh  feld1.txt  feld2.txt  figs.gp  figspdf.gp
Ue11/aufgabe/: CMakeLists.txt  main.cpp
Ue11/plots/: Diamant  DiamantMove  Halo  HaloMove  Spitz  SpitzMove  Wuschel  WuschelMove
projekt/: Nuklide.txt  U235nf_fp.txt  build_and_run.sh  protokoll.txt
projekt/aufgabe/: CMakeLists.txt  main.cpp
ue01/: PROTOKOLL.txt
ue02/aufgabe/: main.cpp
ue04/: build_and_run.sh  plot_exercise.p
ue04/aufgabe/: CMakeLists.txt
ue04/aufgabe/utils/: CMakeLists.txt  myStatisticOps.hpp
(+18 files in other folders)
